# mujoco-mcp-server

./: .gitignore  CLAUDE.md  LICENSE  README.md  mujoco_mcp_architecture_v2.0.md  pyproject.toml
docs/plans/: 2026-02-21-franka-vention-scene-design.md  2026-02-21-franka-vention-scene.md  2026-02-22-phase4-integration.md  2026-02-22-vision-api-design.md  2026-02-22-vision-api-plan.md  2026-02-22-vision-optimization-design.md  2026-02-22-vision-optimization-plan.md  2026-02-26-maintainability-design.md  2026-02-26-maintainability-implementation-plan.md  2026-03-04-optimization-design.md  2026-03-04-optimization-implementation-plan.md  2026-03-05-media-export-design.md  2026-03-05-media-export-implementation-plan.md  2026-03-05-robustness-design.md  2026-03-05-robustness-implementation-plan.md
models/: box_drop.xml  vention_table_10k.stl  vention_table_5k.stl  vention_table_repaired.stl
scripts/: decimate_table.py  launch_franka_scene.py
src/mujoco_mcp/: __init__.py  _registry.py  compat.py  constants.py  menagerie_loader.py  multi_robot_coordinator.py  prompts.py  resources.py  rl_integration.py  sensor_feedback.py  server.py  sim_manager.py
src/mujoco_mcp/tools/: __init__.py  analysis.py  batch.py  control.py  coordination.py  export.py  (+16 more)
tests/: conftest.py  test_analysis_tools.py  test_control.py  test_coordinator.py  test_diagnostics.py  test_export_tools.py  test_kinematics.py  test_media.py  test_menagerie.py  test_model_tools.py  test_optimization.py  test_rl.py  test_robustness.py  test_sensor_fusion.py  test_sim_tools.py  test_spatial.py  test_vision.py
(+1 files in other folders)
